[package]
name = "bolt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
kube = { version = "0.98", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
axum = { version = "0.7", features = ["macros"] }
futures = "0.3"
